@@ -34,6 +34,24 @@
         <version>1.18.34</version>
         <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.1</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.8.1</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.8.1</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
 
     <repositories>
@@ -47,6 +65,12 @@
         <id>org.postgresql</id>
         <url>
           https://mvnrepository.com/artifact/org.postgresql/postgresql
+        </url>
+      </repository>
+      <repository>
+        <id>org.junit.jupiter</id>
+        <url>
+          https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
         </url>
       </repository>
     </repositories>
@@ -110,6 +134,78 @@
                   </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.8.12</version>
+              <executions>
+                <execution>
+                <id>default-prepare-agent</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                  <destFile>
+                    ${project.build.directory}/coverage-reports/jacoco.exec
+                  </destFile>
+                  <propertyName>surefireArgLine</propertyName>
+                  <excludes>
+                    <exclude>edu/school21/app/Main.class</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>default-report</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <dataFile>
+                    ${project.build.directory}/coverage-reports/jacoco.exec
+                  </dataFile>
+                  <outputDirectory>
+                    ${project.reporting.outputDirectory}/jacoco
+                  </outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>default-check</id>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+                <configuration>
+                  <rules>
+                    <rule>
+                      <element>BUNDLE</element>
+                      <limits>
+                        <limit>
+                          <counter>COMPLEXITY</counter>
+                          <value>COVEREDRATIO</value>
+                          <minimum>0.70</minimum>
+                        </limit>
+                      </limits>
+                    </rule>
+                  </rules>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.5.0</version>
+            <configuration>
+              <argLine>
+                --illegal-access=permit
+              </argLine>
+              <testFailureIgnore>true</testFailureIgnore>
+              <forkCount>2</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>${surefireArgLine}</argLine> 
+            </configuration>
+          </plugin>
+
 
         </plugins>
     </build>
